Fixed the explore overflow

--- a/src/Components/Explore.module.css
+++ b/src/Components/Explore.module.css
@@ -1,7 +1,12 @@
 .explore{
     background-color: #F8F8F2;
-    padding: 30px;
     margin-bottom: 30px;
+}
+
+.product{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 h1{
@@ -84,3 +89,8 @@ h1{
     margin-bottom: -15px;
 }
 
+@media(max-width: 760px){
+    .product{
+        justify-content: center;
+    }
+}
